BETA/Android-Ready

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -33,5 +33,15 @@ page-home {
   transition: all 0.2s ease-in-out;
 }
 
+.pause
+{
+  width: 70px;
+  height: 70px;
+  border-radius: 100px;
+  font-size: 24px;
+  margin: auto;
+  transition: all 0.2s ease-in-out;
+}
+
 
 }
